Bug 366946 - WRONG_DOCUMENT_ERR not thrown for Range.compareBoundaryPoints p=Ryan Jones <sciguyryan@gmail.com> r+sr=peterv